// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`definition without IAM statements/policies present 1`] = `
Object {
  "Outputs": Object {},
  "Resources": Object {
    "FargateIamExecutionRole": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": Object {
                "Service": Array [
                  "ecs-tasks.amazonaws.com",
                  "events.amazonaws.com",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy",
          "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceEventsRole",
        ],
        "Tags": Array [],
      },
      "Type": "AWS::IAM::Role",
    },
    "FargateIamTaskRole": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": Object {
                "Service": Array [
                  "ecs-tasks.amazonaws.com",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [],
        "Policies": Array [],
        "Tags": Array [],
      },
      "Type": "AWS::IAM::Role",
    },
    "FargateTasksCluster": Object {
      "Properties": Object {
        "CapacityProviders": Array [
          "FARGATE",
          "FARGATE_SPOT",
        ],
        "ClusterName": undefined,
        "ClusterSettings": undefined,
        "Tags": Array [],
      },
      "Type": "AWS::ECS::Cluster",
    },
    "FargateTasksLogGroup": Object {
      "Properties": Object {
        "LogGroupName": undefined,
        "RetentionInDays": undefined,
        "Tags": Array [],
      },
      "Type": "AWS::Logs::LogGroup",
    },
  },
}
`;

exports[`service and scheduled tasks 1`] = `
Object {
  "Outputs": Object {
    "Mytask1ServiceArn": Object {
      "Value": Object {
        "Ref": "Mytask1Service",
      },
    },
    "Mytask1TaskArn": Object {
      "Value": Object {
        "Ref": "Mytask1Task",
      },
    },
    "Mytask2ScheduledTaskArn": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "Mytask2ScheduledTask",
          "Arn",
        ],
      },
    },
    "Mytask2TaskArn": Object {
      "Value": Object {
        "Ref": "Mytask2Task",
      },
    },
  },
  "Resources": Object {
    "FargateIamExecutionRole": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": Object {
                "Service": Array [
                  "ecs-tasks.amazonaws.com",
                  "events.amazonaws.com",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy",
          "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceEventsRole",
        ],
        "Tags": Array [
          Object {
            "Key": "provider",
            "Value": "tag",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FargateIamTaskRole": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": Object {
                "Service": Array [
                  "ecs-tasks.amazonaws.com",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "sqs:*",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "FargateTaskPolicy",
          },
        ],
        "Tags": Array [
          Object {
            "Key": "provider",
            "Value": "tag",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FargateTasksCluster": Object {
      "Properties": Object {
        "CapacityProviders": Array [
          "FARGATE",
          "FARGATE_SPOT",
        ],
        "ClusterName": "my-cluster-name",
        "ClusterSettings": Array [
          Object {
            "Name": "containerInsights",
            "Value": "disabled",
          },
        ],
        "Tags": Array [
          Object {
            "Key": "provider",
            "Value": "tag",
          },
        ],
      },
      "Type": "AWS::ECS::Cluster",
    },
    "FargateTasksLogGroup": Object {
      "Properties": Object {
        "LogGroupName": undefined,
        "RetentionInDays": undefined,
        "Tags": Array [
          Object {
            "Key": "provider",
            "Value": "tag",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
    },
    "Mytask1Service": Object {
      "DependsOn": undefined,
      "Properties": Object {
        "CapacityProviderStrategy": Array [
          Object {
            "CapacityProvider": "FARGATE",
            "Weight": 1,
          },
        ],
        "Cluster": Object {
          "Fn::Sub": "\${FargateTasksCluster}",
        },
        "DeploymentConfiguration": Object {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 100,
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": "true",
        "NetworkConfiguration": Object {
          "AwsvpcConfiguration": Object {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": Array [
              "sg-1234",
            ],
            "Subnets": Array [
              "subnet-1234",
              "subnet-5678",
            ],
          },
        },
        "PropagateTags": "TASK_DEFINITION",
        "ServiceName": "my-task-1",
        "Tags": Array [
          Object {
            "Key": "task",
            "Value": "tag",
          },
        ],
        "TaskDefinition": Object {
          "Fn::Sub": "\${Mytask1Task}",
        },
      },
      "Type": "AWS::ECS::Service",
    },
    "Mytask1Task": Object {
      "DependsOn": undefined,
      "Properties": Object {
        "ContainerDefinitions": Array [
          Object {
            "Command": Array [
              "command",
            ],
            "EntryPoint": Array [
              "entrypoint",
            ],
            "Environment": Array [
              Object {
                "Name": "task",
                "Value": "variable",
              },
            ],
            "Image": undefined,
            "LogConfiguration": Object {
              "LogDriver": "awslogs",
              "Options": Object {
                "awslogs-group": Object {
                  "Fn::Sub": "\${FargateTasksLogGroup}",
                },
                "awslogs-region": Object {
                  "Fn::Sub": "\${AWS::Region}",
                },
                "awslogs-stream-prefix": "fargate",
              },
            },
            "Name": "my-task-1",
            "PortMappings": Array [
              Object {
                "containerPort": 5349,
                "hostPort": 5349,
                "protocol": "tcp",
              },
              Object {
                "containerPortRange": "10000-20000",
                "protocol": "udp",
              },
            ],
            "StopTimeout": 5,
          },
          Object {
            "Image": "additional-container-image",
            "Name": "additional-container-name",
          },
        ],
        "Cpu": 256,
        "EphemeralStorage": 5,
        "ExecutionRoleArn": Object {
          "Fn::Sub": "\${FargateIamExecutionRole}",
        },
        "Family": "my-task-1",
        "Memory": "0.5GB",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": Array [
          "FARGATE",
        ],
        "RuntimePlatform": Object {
          "CpuArchitecture": "ARM64",
        },
        "Tags": Array [
          Object {
            "Key": "task",
            "Value": "tag",
          },
        ],
        "TaskRoleArn": Object {
          "Fn::Sub": "\${FargateIamTaskRole}",
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
    "Mytask2ScheduledTask": Object {
      "DependsOn": undefined,
      "Properties": Object {
        "ScheduleExpression": "rate(1 minute)",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "FargateTasksCluster",
                "Arn",
              ],
            },
            "EcsParameters": Object {
              "LaunchType": "FARGATE",
              "NetworkConfiguration": Object {
                "AwsVpcConfiguration": Object {
                  "AssignPublicIp": "DISABLED",
                  "SecurityGroups": Array [
                    "sg-1234",
                  ],
                  "Subnets": Array [
                    "subnet-1234",
                    "subnet-5678",
                  ],
                },
              },
              "TaskCount": 1,
              "TaskDefinitionArn": Object {
                "Fn::Sub": "\${Mytask2Task}",
              },
            },
            "Id": "Mytask2",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "FargateIamExecutionRole",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "Mytask2Task": Object {
      "DependsOn": undefined,
      "Properties": Object {
        "ContainerDefinitions": Array [
          Object {
            "Command": Array [
              "command",
            ],
            "EntryPoint": Array [
              "entrypoint",
            ],
            "Environment": Array [
              Object {
                "Name": "task",
                "Value": "variable",
              },
            ],
            "Image": undefined,
            "LogConfiguration": Object {
              "LogDriver": "awslogs",
              "Options": Object {
                "awslogs-group": Object {
                  "Fn::Sub": "\${FargateTasksLogGroup}",
                },
                "awslogs-region": Object {
                  "Fn::Sub": "\${AWS::Region}",
                },
                "awslogs-stream-prefix": "fargate",
              },
            },
            "Name": "my-task-2",
            "PortMappings": undefined,
          },
        ],
        "Cpu": 256,
        "ExecutionRoleArn": Object {
          "Fn::Sub": "\${FargateIamExecutionRole}",
        },
        "Family": "my-task-2",
        "Memory": "0.5GB",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": Array [
          "FARGATE",
        ],
        "RuntimePlatform": undefined,
        "Tags": Array [
          Object {
            "Key": "task",
            "Value": "tag",
          },
        ],
        "TaskRoleArn": Object {
          "Fn::Sub": "\${FargateIamTaskRole}",
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
  },
}
`;

exports[`single scheduled task 1`] = `
Object {
  "Outputs": Object {
    "MytaskScheduledTaskArn": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "MytaskScheduledTask",
          "Arn",
        ],
      },
    },
    "MytaskTaskArn": Object {
      "Value": Object {
        "Ref": "MytaskTask",
      },
    },
  },
  "Resources": Object {
    "FargateIamExecutionRole": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": Object {
                "Service": Array [
                  "ecs-tasks.amazonaws.com",
                  "events.amazonaws.com",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy",
          "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceEventsRole",
        ],
        "Tags": Array [
          Object {
            "Key": "provider",
            "Value": "tag",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FargateIamTaskRole": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": Object {
                "Service": Array [
                  "ecs-tasks.amazonaws.com",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "sqs:*",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "FargateTaskPolicy",
          },
        ],
        "Tags": Array [
          Object {
            "Key": "provider",
            "Value": "tag",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FargateTasksCluster": Object {
      "Properties": Object {
        "CapacityProviders": Array [
          "FARGATE",
          "FARGATE_SPOT",
        ],
        "ClusterName": undefined,
        "ClusterSettings": undefined,
        "Tags": Array [
          Object {
            "Key": "provider",
            "Value": "tag",
          },
        ],
      },
      "Type": "AWS::ECS::Cluster",
    },
    "FargateTasksLogGroup": Object {
      "Properties": Object {
        "LogGroupName": undefined,
        "RetentionInDays": undefined,
        "Tags": Array [
          Object {
            "Key": "provider",
            "Value": "tag",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
    },
    "MytaskScheduledTask": Object {
      "DependsOn": undefined,
      "Properties": Object {
        "ScheduleExpression": "rate(1 minute)",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "FargateTasksCluster",
                "Arn",
              ],
            },
            "EcsParameters": Object {
              "LaunchType": "FARGATE",
              "NetworkConfiguration": Object {
                "AwsVpcConfiguration": Object {
                  "AssignPublicIp": "DISABLED",
                  "SecurityGroups": Array [
                    "sg-1234",
                  ],
                  "Subnets": Array [
                    "subnet-1234",
                    "subnet-5678",
                  ],
                },
              },
              "TaskCount": 1,
              "TaskDefinitionArn": Object {
                "Fn::Sub": "\${MytaskTask}",
              },
            },
            "Id": "Mytask",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "FargateIamExecutionRole",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "MytaskTask": Object {
      "DependsOn": undefined,
      "Properties": Object {
        "ContainerDefinitions": Array [
          Object {
            "Command": Array [
              "command",
            ],
            "EntryPoint": Array [
              "entrypoint",
            ],
            "Environment": Array [
              Object {
                "Name": "task",
                "Value": "variable",
              },
            ],
            "Image": undefined,
            "LogConfiguration": Object {
              "LogDriver": "awslogs",
              "Options": Object {
                "awslogs-group": Object {
                  "Fn::Sub": "\${FargateTasksLogGroup}",
                },
                "awslogs-region": Object {
                  "Fn::Sub": "\${AWS::Region}",
                },
                "awslogs-stream-prefix": "fargate",
              },
            },
            "Name": "my-task",
            "PortMappings": undefined,
          },
        ],
        "Cpu": 256,
        "ExecutionRoleArn": Object {
          "Fn::Sub": "\${FargateIamExecutionRole}",
        },
        "Family": "my-task",
        "Memory": "0.5GB",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": Array [
          "FARGATE",
        ],
        "RuntimePlatform": undefined,
        "Tags": Array [
          Object {
            "Key": "task",
            "Value": "tag",
          },
        ],
        "TaskRoleArn": Object {
          "Fn::Sub": "\${FargateIamTaskRole}",
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
  },
}
`;

exports[`single service task 1`] = `
Object {
  "Outputs": Object {
    "MytaskServiceArn": Object {
      "Value": Object {
        "Ref": "MytaskService",
      },
    },
    "MytaskTaskArn": Object {
      "Value": Object {
        "Ref": "MytaskTask",
      },
    },
  },
  "Resources": Object {
    "FargateIamExecutionRole": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": Object {
                "Service": Array [
                  "ecs-tasks.amazonaws.com",
                  "events.amazonaws.com",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy",
          "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceEventsRole",
        ],
        "Tags": Array [
          Object {
            "Key": "provider",
            "Value": "tag",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FargateIamTaskRole": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": Object {
                "Service": Array [
                  "ecs-tasks.amazonaws.com",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "sqs:*",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "FargateTaskPolicy",
          },
        ],
        "Tags": Array [
          Object {
            "Key": "provider",
            "Value": "tag",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FargateTasksCluster": Object {
      "Properties": Object {
        "CapacityProviders": Array [
          "FARGATE",
          "FARGATE_SPOT",
        ],
        "ClusterName": undefined,
        "ClusterSettings": undefined,
        "Tags": Array [
          Object {
            "Key": "provider",
            "Value": "tag",
          },
        ],
      },
      "Type": "AWS::ECS::Cluster",
    },
    "FargateTasksLogGroup": Object {
      "Properties": Object {
        "LogGroupName": undefined,
        "RetentionInDays": undefined,
        "Tags": Array [
          Object {
            "Key": "provider",
            "Value": "tag",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
    },
    "MytaskService": Object {
      "DependsOn": undefined,
      "Properties": Object {
        "CapacityProviderStrategy": Array [
          Object {
            "CapacityProvider": "FARGATE",
            "Weight": 1,
          },
        ],
        "Cluster": Object {
          "Fn::Sub": "\${FargateTasksCluster}",
        },
        "DeploymentConfiguration": Object {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 100,
        },
        "DesiredCount": 1,
        "NetworkConfiguration": Object {
          "AwsvpcConfiguration": Object {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": Array [
              "sg-1234",
            ],
            "Subnets": Array [
              "subnet-1234",
              "subnet-5678",
            ],
          },
        },
        "PropagateTags": "TASK_DEFINITION",
        "ServiceName": "my-task",
        "Tags": Array [
          Object {
            "Key": "task",
            "Value": "tag",
          },
        ],
        "TaskDefinition": Object {
          "Fn::Sub": "\${MytaskTask}",
        },
      },
      "Type": "AWS::ECS::Service",
    },
    "MytaskTask": Object {
      "DependsOn": undefined,
      "Properties": Object {
        "ContainerDefinitions": Array [
          Object {
            "Command": Array [
              "command",
            ],
            "EntryPoint": Array [
              "entrypoint",
            ],
            "Environment": Array [
              Object {
                "Name": "task",
                "Value": "variable",
              },
            ],
            "Image": undefined,
            "LogConfiguration": Object {
              "LogDriver": "awslogs",
              "Options": Object {
                "awslogs-group": Object {
                  "Fn::Sub": "\${FargateTasksLogGroup}",
                },
                "awslogs-region": Object {
                  "Fn::Sub": "\${AWS::Region}",
                },
                "awslogs-stream-prefix": "fargate",
              },
            },
            "Name": "my-task",
            "PortMappings": undefined,
          },
        ],
        "Cpu": 256,
        "ExecutionRoleArn": Object {
          "Fn::Sub": "\${FargateIamExecutionRole}",
        },
        "Family": "my-task",
        "Memory": "0.5GB",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": Array [
          "FARGATE",
        ],
        "RuntimePlatform": undefined,
        "Tags": Array [
          Object {
            "Key": "task",
            "Value": "tag",
          },
        ],
        "TaskRoleArn": Object {
          "Fn::Sub": "\${FargateIamTaskRole}",
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
  },
}
`;
